# driver2socks

./: .gitignore  .gitmodules  README.md
WinDivertLite/: WinDivertLite.vcxproj  WinDivertLite.vcxproj.filters  mln_hash.c  mln_prime_generator.c  mln_rbtree.c  mln_rbtree.h  mln_utils.h  windivert_sys.c
WinDivertLiteDll/: WinDivertLiteDll.vcxproj  WinDivertLiteDll.vcxproj.filters
common/: windivert.h
d2s-cli/: CMakeLists.txt  adapters_info.h  asio_coro_util.hpp  driver2socks.cpp  driver2socks.h  lwipstack.h  main.cpp  mpmc_queue.h  netpacket_pool.h  socks_client.hpp  vcpkg.json  windivert_driver.cpp  windivert_driver.h
d2s-cli/lwip/: lwipopts.h  lwippools.h  sys_arch.cpp  sys_arch.h
d2s-cli/lwip_core/: CMakeLists.txt  note.txt
d2s-cli/lwip_core/src/core/: tcp.c  tcp_in.c  tcp_out.c  udp.c
d2s-cli/lwip_core/src/core/ipv6/: ip6.c
d2s-cli/lwip_core/src/include/lwip/: arch.h  netif.h  opt.h  tcp.h  udp.h
d2s-cli/lwip_core/src/netif/: bridgeif.c
driver/: WinDivertLite.sln
driver/WinDivertLite/: WinDivertLite.vcxproj  WinDivertLite.vcxproj.filters  mln_hash.h  mln_rbtree.c  mln_types.h  windivert_sys.c
driver/WinDivertLiteDll/: windivert.c  windivert.def
driver/common/: windivert.h  windivert_device.h  windivert_helper.c  windivert_shared.c
lwip_socks/: CMakeLists.txt
lwip_socks/contrib/apps/tcpecho_raw/: tcpecho_raw.c
lwip_socks/contrib/examples/example_app/: TUN2SOCKS.CPP  WindivertDriver.h  asio_coro_util.hpp  common.h  diver.cpp  io.hpp  iocontext.h  lwipcfg.h  lwipopts.h  lwipstack.h  main.cpp  netpacket_pool.h  socks5.cpp  socks5.h  socks_client.hpp  spsc_queue.h  tcp_stream.hpp  tcpecho_raw.cpp  tcpecho_raw.h  test.c  tun2socks.CPP  tun2socks.h
lwip_socks/d2s-cli/: CMakeLists.txt  WindivertDriver.h  app_config.h  cfg.json  driver2socks.cpp  iocontext.cpp  lwipstack.h  main.cpp  socks_client.hpp  tun2socks.cpp  tun2socks.h  windivert_driver.cpp  windivert_driver.h
lwip_socks/src/: Filelists.cmake  sys_arch.cpp
lwip_socks/src/core/: netif.c  tcp.c  tcp_in.c  tcp_out.c  udp.c
lwip_socks/src/core/ipv4/: ip4.c
lwip_socks/src/include/lwip/: netif.h
